# firecrest-executor

./: README.md  firecrest_executor.py  pyproject.toml
examples/: optimize.py  simple.py
